# scale-invariant-template-matching

./: README.md  main.py  pyproject.toml  template_matching.py
