[project]
name = "scale-invariant-template-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-contrib-python",
    "pip>=25.0.1",
]

# [tool.uv.sources]
# opencv-contrib-python = { url = "https://github.com/zyoNoob/scale-invariant-template-matching/raw/refs/heads/main/whl/opencv_contrib_python-4.11.0.86-cp313-cp313-linux_x86_64.whl" }

[tool.setuptools]
py-modules = ["template_matching"]
